--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.7",
+    "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.66.8",
     "axios": "^1.7.9",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
-    "tailwindcss": "^4.0.7",
+    "tailwindcss": "^4.1.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
