--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@tanstack/react-query": "^5.66.8",
     "axios": "^1.7.9",
     "framer-motion": "^12.6.3",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-router-dom": "^7.2.0",
     "tailwindcss": "^4.1.3",
     "zustand": "^5.0.3"
