--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.6.3",
     "i18next": "^24.2.3",
@@ -57,10 +57,11 @@
     "next-themes": "^0.4.6",
     "path": "^0.12.7",
     "react": "^19.0.0",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-i18next": "^15.4.1",
+    "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.2.0",
     "recharts": "^2.15.3",
