--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.2.0",
+    "react-scroll": "^1.9.3",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
